containerization/03-expert/lab/solution/k8s/05-ledger-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-api
  namespace: aetherbank
  labels:
    app: ledger-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ledger-api
  template:
    metadata:
      labels:
        app: ledger-api
        tier: backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: api
          image: hashicorp/http-echo:1.0
          args:
            - "-text=aether-ledger-api"
            - "-listen=:8080"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          startupProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 18
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-api
  namespace: aetherbank
spec:
  selector:
    app: ledger-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
