containerization/03-expert/lab/solution/k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aether
  namespace: aetherbank
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aether.local
      secretName: aether-tls
  rules:
    - host: aether.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ledger-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
